# web-service

./: .env  .env-example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  server.js  yerkopi-web.service
components/: middlewares.js  routes.js
public/components/: footer.html  header.html
public/pages/: blog.html  index.html  yerkopi.html
public/script/: main.js
public/style/: theme.css
script/: install.sh  update.sh
src/: main.cpp
